syntax = "proto3";

package server;
option go_package = "./pb";

import "google/protobuf/empty.proto";

// ---- Message Types ----
message ListNodeReq {
  int32 type = 1;
  int32 start = 2;
  int32 end = 3;
}

message Node {
  string id = 1;
  string ip = 2;
  int32 net_delay = 3;
  string bind_user = 4;
  bool online = 5;
}

message ListNodeResp {
  repeated Node nodes = 1;
  int32 total = 2;
}

message Route {
  // 1. auto mode, 2. manual mode, 3. Timed switching点击并应用
  int32 mode = 1;
  string node_id = 2;
  // mode=Timed
	// If >0, switch every N minutes
  int32 interval_minutes = 3;
  // mode=Timed
	// If interval_minutes=0, trigger at specific UTC minutes of day
  int32 utc_minute_of_day =4;
}

message TrafficLimit {
  int64 start_time = 1;
  int64 end_time = 2;
  int64 total_traffic = 3;
}

message CreateUserReq {
  string user_name = 1;
  string password = 2;
  TrafficLimit traffic_limit = 3;
  Route route = 4;
  int64 upload_rate_limite = 5;
  int64 download_rate_limit = 6;
}

message CreateUserResp {
  string user_name = 1;
  TrafficLimit traffic_limit = 2;
  Route route = 3;
  string node_ip = 4;
  int64 upload_rate_limite = 5;
  int64 download_rate_limit = 6;
}

message UserOperationResp {
  bool success = 1;
  string err_msg = 2;
}

message ModifyUserPasswordReq {
  string user_name = 1;
  string new_password = 2;
}

message ModifyUserReq {
  string user_name = 1;
  TrafficLimit traffic_limit = 2;
  Route route = 3;
}

message GetUserReq {
  string user_name = 1;
}

message SwitchUserRouteNodeReq {
  string user_name = 1;
  string node_id = 2;
}

message DeleteUserReq {
  string user_name = 1;
}

message StartOrStopUserReq {
  string user_name = 1;
  string action = 2;
}

message User {
  string user_name = 1;
  TrafficLimit traffic_limit = 2;
  Route route = 3;
  string node_ip = 4;
  bool node_online = 5;
  int64 current_traffic = 6;
  bool off = 7;
  int64 upload_rate_limite = 8;
  int64 download_rate_limit = 9;
  int64 last_route_switch_time = 10;
}

message ListUserReq {
  int32 start = 1;
  int32 end = 2;
}

message ListUserResp {
  repeated User users = 1;
  int32 total = 2;
}

message GetServerInfoResp {
  string socks5_addr = 1;
  string ws_server_url = 2;
  string access_secret = 3;
  int64 access_expire = 4;
}

message GetNodeAccessTokenReq {
  string node_id = 1;
}

message GetNodeAccessTokenResp {
  string token = 1;
}

message AddBlacklistReq {
  string node_id = 1;
}

message RemoveBlacklistReq {
  string node_id = 1;
}

message GetBlacklistResp {
  repeated string nodes = 1;
}

message KickNodeReq {
  string node_id = 1;
}

message Empty {}

// ---- Service Definition ----

service ServerAPI {
  rpc ListNode(ListNodeReq) returns (ListNodeResp);
  rpc CreateUser(CreateUserReq) returns (CreateUserResp);
  rpc ListUser(ListUserReq) returns (ListUserResp);
  rpc ModifyUserPassword(ModifyUserPasswordReq) returns (UserOperationResp);
  rpc ModifyUser(ModifyUserReq) returns (UserOperationResp);
  rpc GetUser(GetUserReq) returns (User);
  rpc DeleteUser(DeleteUserReq) returns (UserOperationResp);
  rpc SwitchUserRouteNode(SwitchUserRouteNodeReq) returns (UserOperationResp);
  rpc StartOrStopUser(StartOrStopUserReq) returns (UserOperationResp);
  rpc GetServerInfo (Empty) returns (GetServerInfoResp);
  rpc GetNodeAccessToken(GetNodeAccessTokenReq) returns (GetNodeAccessTokenResp);
  rpc AddBlacklist(AddBlacklistReq) returns (UserOperationResp);
  rpc RemoveBlacklist(RemoveBlacklistReq) returns (UserOperationResp);
  rpc GetBlacklist(Empty) returns (GetBlacklistResp);
  rpc KickNode(KickNodeReq) returns (UserOperationResp);

}
